--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Title</title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 	</head>
